--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
   <div class="video-wrapper">
     <video id="video" controls>
-        <source src="video.mp4" type="video/mp4">
+        <source src="assets/video/video.mp4" type="video/mp4">
     </video>
 
     <!-- KIRI -->
     <button class="icon-btn wa" onclick="joinWhatsAppGroup()">
-        <img src="video.mp4" alt="">
+        <img src="assets/icons/whatsapp.png" alt="">
         <span>Video Lainnya</span>
     </button>
 
     <!-- KANAN -->
     <button class="icon-btn fb" onclick="openFacebookPage()">
-        <img src="video.mp4.png" alt="">
+        <img src="assets/icons/facebook.png" alt="">
         <span>Banyak Video</span>
     </button>
 </div>
@@ -41,17 +41,17 @@
 
 <div class="share-links" id="shareLinks">
     <button class="share-item wa" onclick="shareWhatsApp()">
-        <img src="video.mp4">
+        <img src="assets/icons/whatsapp.png">
         <span>WhatsApp</span>
     </button>
 
     <button class="share-item tg" onclick="shareTelegram()">
-        <img src="video.mp4">
+        <img src="assets/icons/telegram.png">
         <span>Telegram</span>
     </button>
 
     <button class="share-item copy" onclick="copyLink()">
-        <img src="video.mp4">
+        <img src="assets/icons/link.png">
         <span>Salin</span>
     </button>
 </div>
@@ -63,4 +63,3 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
-
