--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="video-wrapper">
     <video id="video" controls>
-        <source src="assets/video/video.mp4" type="video/mp4">
+        <source src="video.mp4" type="video/mp4">
     </video>
 
     <!-- KIRI -->
@@ -63,3 +63,4 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
