--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Player</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Vldeyycom</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="header">Video Player</header>
+<header class="header">Vldeyycom</header>
 
 <main class="container">
 
@@ -19,14 +19,14 @@
 
     <!-- KIRI -->
     <button class="icon-btn wa" onclick="joinWhatsAppGroup()">
-        <img src="assets/icons/whatsapp.png" alt="">
+        <img src="whatsapp.png" alt="">
         <span>Video Lainnya</span>
     </button>
 
     <!-- KANAN -->
     <button class="icon-btn fb" onclick="openFacebookPage()">
-        <img src="assets/icons/facebook.png" alt="">
-        <span>Banyak Video</span>
+        <img src="facebook.png" alt="">
+        <span>Banyak Videy</span>
     </button>
 </div>
 
@@ -41,17 +41,17 @@
 
 <div class="share-links" id="shareLinks">
     <button class="share-item wa" onclick="shareWhatsApp()">
-        <img src="assets/icons/whatsapp.png">
+        <img src="whatsapp.png">
         <span>WhatsApp</span>
     </button>
 
     <button class="share-item tg" onclick="shareTelegram()">
-        <img src="assets/icons/telegram.png">
+        <img src="telegram.png">
         <span>Telegram</span>
     </button>
 
     <button class="share-item copy" onclick="copyLink()">
-        <img src="assets/icons/link.png">
+        <img src="link.png">
         <span>Salin</span>
     </button>
 </div>
@@ -60,7 +60,6 @@
 
 </main>
 
-<script src="assets/js/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
-
