--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<header class="header">Vldeyycom</header>
+<header class="header">FB : Wulan Della</header>
 
 <main class="container">
 
@@ -63,3 +63,4 @@
 <script src="main.js"></script>
 </body>
 </html>
+
